Update and rename Assignment 3 - EDA colab and apache beam colab to README

--- a/Assignment 3/README
+++ b/Assignment 3/README
@@ -1,3 +1,5 @@
+EDA colab and apache beam colab
+
 Assignment 3.1 - EDA
 https://colab.research.google.com/drive/1o5GDk-ZrufXosEONYqBuHdOho0Zb2e6d?usp=sharing
 
